<resources>
    <string name="app_name">Helasaviya</string>
    <string name="header">Helasaviya</string>
    <string name="amount">Amount :</string>
    <string name="payment_method">Choose payment method</string>
    <string name="paypal">PayPal</string>
    <string name="credit_or_debit">Credit/Debit Card</string>
    <string name="username">username</string>
    <string name="password">Password</string>
    <string name="paypal_gateway">Paypal payment gateway</string>
    <string name="pay">Pay</string>
    <string name="cancel">Cancel</string>
    <string name="login">Log In</string>
    <string name="successful_payment">Your payment is successfully completed.</string>
    <string name="btn_ok">Ok</string>
    <string name="unsuccessful_payment">Your payment is unsuccessful.</string>
    <string name="btn_try">Try Again</string>
    <string name="ok_and_save_card">Ok and Save my Card</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="successful_card_saving">Card saving successfully completed.</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="card_number">Card Number</string>
    <string name="cardholder">Cardholder Name</string>
    <string name="exp_date">Expire Date</string>
    <string name="cvv">CVV</string>
    <string name="month">mm</string>
    <string name="year">yy</string>
    <string name="card_update">Card successfully updated.</string>
    <string name="payment_report">Monthly Payments Summery</string>
    <string name="no_of_transactions">Number of Transactions :</string>
    <string name="total_amount">Total amount of Transactions :</string>
    <string name="income">Company Income :</string>
</resources>